--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html-autoprefixer",
+  "name": "tonix-html-autoprefixer",
   "version": "0.3.8",
   "description": "Autoprefix all CSS inside an html page - CSS inside style tags and inside style attributes",
   "main": "lib/main.js",
@@ -7,11 +7,11 @@
     "test": "test"
   },
   "scripts": {
-    "test": "istanbul test _mocha -- --recursive"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/rebelmail/html-autoprefixer.git"
+    "url": "git://github.com/rebelmail/tonix-html-autoprefixer.git"
   },
   "keywords": [
     "autoprefixer",
@@ -26,11 +26,10 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.4.1",
-    "istanbul": "^0.4.1",
-    "mocha": "^2.3.4"
+    "mocha": "^8.1.3"
   },
   "dependencies": {
-    "autoprefixer": "^6.1.1",
-    "html-postcss": "^0.1.2"
+    "autoprefixer": "^10.0.1",
+    "html-postcss": "^0.2.1"
   }
 }
