--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
   "author": "motdotla",
   "license": "ISC",
   "devDependencies": {
-    "chai": "^3.4.1",
+    "chai": "^4.2.0",
     "mocha": "^8.1.3"
   },
   "dependencies": {
     "autoprefixer": "^10.0.1",
-    "html-postcss": "^0.2.1"
+    "html-postcss": "^0.2.1",
+    "postcss": "^8.1.1"
   }
 }
