--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/rebelmail/tonix-html-autoprefixer.git"
+    "url": "https://github.com/tonix-tuft/tonix-html-autoprefixer.git"
   },
   "keywords": [
     "autoprefixer",
