--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   },
   "dependencies": {
     "autoprefixer": "^10.0.1",
-    "html-postcss": "^0.2.1",
-    "postcss": "^8.1.1"
+    "tonix-html-postcss": "^1.0.0"
   }
 }
