--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "tonix-html-autoprefixer",
-  "version": "1.3.1",
+  "name": "html-css-autoprefixer",
+  "version": "2.0.0",
   "description": "Autoprefix all CSS inside an html page - CSS inside style tags and inside style attributes",
   "main": "lib/main.js",
+  "bin": "lib/cli.js",
   "directories": {
     "test": "test"
   },
