--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html-css-autoprefixer",
+  "name": "tonix-html-autoprefixer",
   "version": "2.0.0",
   "description": "Autoprefix all CSS inside an html page - CSS inside style tags and inside style attributes",
   "main": "lib/main.js",
@@ -36,7 +36,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.1.0",
-    "tonix-html-postcss": "^1.0.0",
-    "postcss": "^8.2.1"
+    "postcss": "^8.2.1",
+    "tonix-html-postcss": "^1.0.0"
   }
 }
